fix: add scrollbar to prevent overflow and scroll automatically on new commands

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -11,6 +11,15 @@ body {
 	min-height: 100vh;
 }
 
-.triangle-clip {
-	clip-path: polygon(-1px -1px, 100% 50%, -1px 100%);
+.triangle {
+	clip-path: polygon(0px 0px, 100% 50%, 0px 100%);
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+	display: none; /* for Chrome, Safari, and Opera */
+}
+
+.hide-scrollbar {
+	-ms-overflow-style: none; /* for Internet Explorer and Edge */
+	scrollbar-width: none; /* for Firefox */
 }
